--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Tournamenter-FLL",
+  "name": "tournamenter-obr",
   "version": "4.1.5",
-  "description": "Plugin da FLL para o Tournamenter.",
+  "description": "Plugin da OBR Regional para o Tournamenter. Importa e exporta diretamente do Sistema olimpo.",
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/http-server public/tournamenter-obr",
