--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tournamenter-obr",
+  "name": "tournamenter-fll",
   "version": "4.1.5",
   "description": "Plugin da OBR Regional para o Tournamenter. Importa e exporta diretamente do Sistema olimpo.",
   "main": "index.js",
